# openpilot-dev

./: .gitignore  .gitmodules  Pipfile  README.md  pyproject.toml  start_all.sh  todo.txt
.github/workflows/: build_carla.yaml  run_setup.yaml  tests.yaml
carla/: .carla_env.sh  run_scenario.sh  scenarios_list.txt  start_carla.sh  towns_list.txt
logs/: open_latest_log.sh  purge_logs.sh
openpilot/: .openpilot_dev_env.sh  bridge.sh  build.sh  launch_openpilot.sh  pipenv_shell.sh  poetry_shell.sh  update_requirements.sh
setup/: README.md  config.defaults  setup.sh
setup/carla/: Dockerfile.carla  carla_setup.sh  helpers.sh
setup/dev-env/: dev_env_setup.sh
setup/drivers/nvidia-graphics/: autoinstall-recommended.sh
setup/drivers/wifi-adapter-88x2bu/: offline_install.sh  online_install.sh
setup/lib/: helpers.sh  print_helpers.sh
setup/openpilot/: helpers.sh  openpilot_setup.sh
setup/tools/: docker.sh  gh.sh  tools_install.sh  vim.sh  vscode.sh
