[tool.poetry]
name = "openpilot-dev"
version = "1.0.0"
description = "an interactive setup that simplifies and automates the process of setting up an openpilot development environment"
authors = ["Jeroen Lammersma <jeroen@lammersma.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeroenlammersma/openpilot-dev"


[tool.poetry.dependencies]
python = "~3.8"
py-trees = "0.8.3"
networkx = "2.2"
shapely = "1.7.1"
psutil = "^5.9.4"
xmlschema = "1.0.18"
ephem = "^4.1.3"
tabulate = "^0.9.0"
opencv-python = "4.2.0.32"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
six = "^1.16.0"
simple-watchdog-timer = "^0.1.1"
carla = "0.9.13"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"