[tool.poetry]
name = "openpilot-dev"
version = "1.0.0"
description = "an interactive setup that simplifies and automates the process of setting up an openpilot development environment"
authors = ["Jeroen Lammersma <jeroen@lammersma.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeroenlammersma/openpilot-dev"


[tool.poetry.dependencies]
python = "~3.8"
carla = "0.9.13"
ephem = "^4.1.3"
matplotlib = "^3.6.2"
networkx = "2.2"
numpy = "^1.23.4"
opencv-python = "4.2.0.32"
psutil = "^5.9.4"
py-trees = "0.8.3"
pygame = "^2.1.2"
requests = "^2.28.1"
shapely = "1.7.1"
simple-watchdog-timer = "^0.1.1"
six = "^1.16.0"
tabulate = "^0.9.0"
xmlschema = "1.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"